--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
+  border-radius: 1rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App{
+  max-width: 600px;
+  margin: 1rem auto;
+  border: 10px solid plum;
+  padding: 1rem;
+  background-color: #dcf8f8;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.App > h1 {
+  margin-top: 0;
+  color: rgb(56, 56, 56);
+}
+
+@media screen and (max-width: 600px) {
+  .App {
+    margin: 1rem 1rem;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+input.New-todo {
+  display: block;
+  width: 100%;
+  padding: .5rem;
+  font-size: 1.2rem;
+  border: 3px solid gray;
+}
+input.New-todo:focus {
+  outline: none;
+}
+
+ul.App-todos {
+  list-style: none;
+  padding: 0;
+  font-size: 1.2rem;
+}
+
+ul.App-todos > li {
+  padding: .5rem;
+}
+
+li.Todo-item {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+li.Todo-item:hover{
+  background-color: rgba(255,255,255,.5);
 }
 
-.App-link {
-  color: #61dafb;
+a.Todo-delete {
+  margin-left: auto;
+  text-decoration: none;
+  color: rgb(87, 87, 87);
+  font-size: 2rem;
+  line-height: 1.2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Done > .Todo-title {
+  text-decoration: line-through;
 }
